cmake_minimum_required(VERSION 3.10)
project(Hello_world)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CURRENT_SOURCE_DIR /home/baha/Alex-kku/workspace/projects/homework03/tmp)
add_executable(Hello_world ${CMAKE_CURRENT_SOURCE_DIR}/hello_world_application/hello_world.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/formatter_lib ${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex_lib)
add_library(Hello STATIC ${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex_lib/formatter_ex.cpp ${CMAKE_CURRENT_SOURCE_DIR}/formatter_lib/formatter.cpp)
target_link_libraries(Hello_world Hello)
